- created S3ObjectCopyRequestParser and working junit class